--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
   <title>Greenbook</title>
@@ -18,7 +18,10 @@
 		</div>
 	</div>
 	<div class="container">
-<%= yield %>
+		<p class="notice"><%= notice %></p>
+       	<p class="alert"><%= alert %></p>
+
+		<%= yield %>
 	</div>
 </body>
 </html>
